--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -7,7 +7,7 @@
   border-radius: 50%;
   width: 32px;
   height: 32px;
-  min-width: 32px;
+  flex: none;
 
   &__image {
     @include fill-img;
@@ -20,33 +20,27 @@
   &_big {
     width: 110px;
     height: 110px;
-    min-width: 110px;
 
     .nd & {
-      min-width: 132px;
       width: 132px;
       height: 132px;
 
       @include screen('xlg', max, 2) {
-        min-width: pxtovw(132, 1660);
         width: pxtovw(132, 1660);
         height: pxtovw(132, 1660);
       }
 
       @include screen('lg', max, 2) {
-        min-width: pxtovw(132, 1366);
         width: pxtovw(132, 1366);
         height: pxtovw(132, 1366);
       }
 
       @include screen('md', max, 2) {
-        min-width: pxtovw(132, 960);
         width: pxtovw(132, 960);
         height: pxtovw(132, 960);
       }
 
       @include screen('sm', max, 2) {
-        min-width: pxtovw(190, 375);
         width: pxtovw(190, 375);
         height: pxtovw(190, 375);
       }
@@ -54,72 +48,60 @@
   }
 
   &_mid {
-    min-width: 43px;
     width: 43px;
     height: 43px;
 
     @include screen('sm') {
       width: 50px;
       height: 50px;
-      min-width: 50px;
     }
   }
 
   &_small {
-    min-width: 34px;
     width: 34px;
     height: 34px;
 
     @include screen('xlg', max, 2) {
-      min-width: pxtovw(34, 1660);
       width: pxtovw(34, 1660);
       height: pxtovw(34, 1660);
     }
 
     @include screen('lg', max, 2) {
-      min-width: pxtovw(26, 1366);
       width: pxtovw(26, 1366);
       height: pxtovw(26, 1366);
     }
 
     @include screen('md', max, 2) {
-      min-width: pxtovw(26, 960);
       width: pxtovw(26, 960);
       height: pxtovw(26, 960);
     }
 
     @include screen('sm', max, 2) {
-      min-width: pxtovw(26, 375);
       width: pxtovw(26, 375);
       height: pxtovw(26, 375);
     }
   }
 
   &_sz34 {
-    min-width: 34px;
     width: 34px;
     height: 34px;
 
     @include screen('xlg', max, 2) {
-      min-width: pxtovw(34, 1660);
       width: pxtovw(34, 1660);
       height: pxtovw(34, 1660);
     }
 
     @include screen('lg', max, 2) {
-      min-width: pxtovw(34, 1366);
       width: pxtovw(34, 1366);
       height: pxtovw(34, 1366);
     }
 
     @include screen('md', max, 2) {
-      min-width: pxtovw(34, 960);
       width: pxtovw(34, 960);
       height: pxtovw(34, 960);
     }
 
     @include screen('sm', max, 2) {
-      min-width: pxtovw(34, 375);
       width: pxtovw(34, 375);
       height: pxtovw(34, 375);
     }
@@ -129,9 +111,108 @@
     flex: none;
 
     @include screen('sm', max, 2) {
-      min-width: pxtovw(30, 375);
       width: pxtovw(30, 375);
       height: pxtovw(30, 375);
+    }
+  }
+
+  &_sz104 {
+    width: 104px;
+    height: 104px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(104, 1660);
+      height: pxtovw(104, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(104, 1366);
+      height: pxtovw(104, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(104, 960);
+      height: pxtovw(104, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(104, 375);
+      height: pxtovw(104, 375);
+    }
+  }
+
+  &_sz160 {
+    width: 160px;
+    height: 160px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(160, 1660);
+      height: pxtovw(160, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(160, 1366);
+      height: pxtovw(160, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(160, 960);
+      height: pxtovw(160, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(160, 375);
+      height: pxtovw(160, 375);
+    }
+  }
+
+  &_sz210 {
+    width: 210px;
+    height: 210px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(210, 1660);
+      height: pxtovw(210, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(210, 1366);
+      height: pxtovw(210, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(210, 960);
+      height: pxtovw(210, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(210, 375);
+      height: pxtovw(210, 375);
+    }
+  }
+
+  &_sz244 {
+    width: 244px;
+    height: 244px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(244, 1660);
+      height: pxtovw(244, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(244, 1366);
+      height: pxtovw(244, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(244, 960);
+      height: pxtovw(244, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(244, 375);
+      height: pxtovw(244, 375);
     }
   }
 }
