--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -234,6 +234,27 @@
     }
   }
 
+  &_fz14 {
+    font-size: 14px;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(14, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(14, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(14, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(14, 375);
+    }
+  }
+
   &_fz15 {
     font-size: 15px;
     line-height: (18 / 15);
