--- a/app/components/records/records.scss
+++ b/app/components/records/records.scss
@@ -84,5 +84,27 @@
         }
       }
     }
+
+    &_mt40 {
+      &:not(:first-child) {
+        margin-top: 40px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(40, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(40, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(40, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(40, 375);
+        }
+      }
+    }
   }
 }
