--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -219,6 +219,7 @@ include ../components/location/location
 include ../components/main-lead/main-lead
 include ../components/main-menu/main-menu
 include ../components/main-menu/nd-main-menu
+include ../components/manager-card/manager-card
 include ../components/messenger/messenger
 include ../components/offer-card/offer-card
 include ../components/offer-panel/offer-panel
@@ -257,6 +258,7 @@ include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
 include ../components/popup-success/popup-success
 include ../components/popup-warning/popup-warning
+include ../components/profile-info/profile-info
 include ../components/promo/promo
 include ../components/records/records
 include ../components/registration-form/registration-form
