--- a/app/pages/host-account/host-account-kyc.pug
+++ b/app/pages/host-account/host-account-kyc.pug
@@ -27,7 +27,7 @@ block content
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfileHost.json')
-          +nd-side-navigation(nav, 'KYC')._profile
+          +nd-side-navigation(nav, 'KYC')._profile._profile_ha
 
       +nd-content-main
         +records._acc
