--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -43,7 +43,7 @@ block content
             +e.head
               +page-title Страницы Host Account
             +e.list
-              //- +nd-link(href="host-account.html") Spacepool - Host Account - Spaces (host-account.html)
+              +nd-link(href="host-account.html") Spacepool - Host Account - Spaces (host-account.html)
               +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages (host-account-messages.html)
               //- +nd-link(href="host-account-managers.html") Spacepool - Host Account - Managers (host-account-managers.html)
               //- +nd-link(href="host-account-managers-inactive.html") Spacepool - Host Account - Managers | Inactive (host-account-managers-inactive.html)
