--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -119,6 +119,46 @@
       }
     }
 
+    &_nd-burger2 {
+      width: 15px;
+      height: 15px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(15, 1366);
+        height: pxtovw(15, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(15, 960);
+        height: pxtovw(15, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(15, 375);
+        height: pxtovw(15, 375);
+      }
+    }
+
+    &_nd-pan {
+      width: 14px;
+      height: 14px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(14, 1366);
+        height: pxtovw(14, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(14, 960);
+        height: pxtovw(14, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(14, 375);
+        height: pxtovw(14, 375);
+      }
+    }
+
     &_cross {
       width: 14px;
       height: 14px;
