--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -5,6 +5,7 @@
   align-items: center;
 
   &__avatar {
+    transition: box-shadow $ease-main;
     margin-right: 10px;
 
     @include screen('md') {
@@ -36,7 +37,6 @@
     }
 
     #{$b}_login & {
-      transition: box-shadow $ease-main;
       margin-right: 11px;
 
       @include screen('xlg', max, 2) {
@@ -125,6 +125,26 @@
 
       @include screen('sm', max, 2) {
         margin-right: pxtovw(9, 375);
+      }
+    }
+
+    .nd a:hover & {
+      box-shadow: 0 0 0 2px $nd-color-main;
+
+      @include screen('xlg', max, 2) {
+        box-shadow: 0 0 0 pxtovw(2, 1660) $nd-color-main;
+      }
+
+      @include screen('lg', max, 2) {
+        box-shadow: 0 0 0 pxtovw(2, 1366) $nd-color-main;
+      }
+
+      @include screen('md', max, 2) {
+        box-shadow: 0 0 0 pxtovw(2, 960) $nd-color-main;
+      }
+
+      @include screen('sm', max, 2) {
+        box-shadow: 0 0 0 pxtovw(2, 375) $nd-color-main;
       }
     }
   }
