--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -167,6 +167,26 @@
         padding: 0 pxtovw(40, 375);
       }
     }
+
+    #{$b}_profile_ha & {
+      padding: 0 33px;
+
+      @include screen('xlg', max, 2) {
+        padding: 0 pxtovw(33, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding: 0 pxtovw(33, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: 0 pxtovw(33, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding: 0 pxtovw(33, 375);
+      }
+    }
   }
 
   &__item {
@@ -445,6 +465,35 @@
     @include screen('sm', max, 2) {
       min-height: pxtovw(369, 375);
       padding: pxtovw(52, 375) 0 pxtovw(40, 375);
+    }
+
+    &_ha {
+      min-height: 368px;
+      padding: 55px 0 25px;
+
+      @include screen('xlg', max, 2) {
+        min-height: pxtovw(368, 1660);
+        padding: pxtovw(55, 1660) 0 pxtovw(25, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        min-height: pxtovw(368, 1366);
+        padding: pxtovw(55, 1366) 0 pxtovw(25, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        min-height: pxtovw(368, 960);
+        padding: pxtovw(55, 960) 0 pxtovw(25, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        min-height: pxtovw(368, 375);
+        padding: pxtovw(55, 375) 0 pxtovw(25, 375);
+      }
+
+      #{$b} {
+
+      }
     }
   }
 }
