--- a/app/pages/host-account/host-account.pug
+++ b/app/pages/host-account/host-account.pug
@@ -27,10 +27,13 @@ block content
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfileHost.json')
-          +nd-side-navigation(nav, 'Spaces')._profile
+          +nd-side-navigation(nav, 'Spaces')._profile._profile_ha
 
       +nd-content-main
-        +records._acc
+        - var spaces = getData('nd-ha-spaces.json')
+        +records
+          each space in spaces
+            +space-settings(space).__item_mt40
 
 block panels
 
